-> Fixed legend width problem (too big to show scrollbar)

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -75,6 +75,7 @@
   .legend
       display: inline-block
       padding: 15px 0px 0px 15px
+      border: 2px groove lighten($isb-dark, 40%)
       overflow-y: auto
       max-height: 150px
       vertical-align: top
